microk8s/infrastructure/installation/argocd/argocd-ingressroute.yaml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: argocd-dashboard
#   namespace: argocd
# spec:
#   entryPoints:
#     - websecure # Sử dụng HTTPS
#   routes:
#     - match: Host(`argocd.manhlam.name.vn`)
#       kind: Rule
#       services:
#         - name: argocd-server
#           port: 80
#       # middlewares:
#       # - name: argocd-strip-prefix
#   tls:
#     # Nếu bạn dùng certResolver, bật dòng dưới
#     # certResolver: cloudflare
#     # Nếu dùng Cloudflare Tunnel (SSL Full mode), chỉ cần enable tls là đủ
#     passthrough: false

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  tls:
    - hosts:
        - argocd.manhlam.name.vn
  rules:
    - host: argocd.manhlam.name.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
